syntax = "proto3";

//option java_multiple_files = true;
//option java_outer_classname = "HelloWorldProto";

package helloworld;

// ./ 指定*.pb.go文件的生成目录。helloworld和package保持一致
option go_package="./;helloworld";


service Greet {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SearchPeople (SearchRequest) returns (SearchReponse) {}
}

enum Home{
  COUNTRY = 0;
  FATHER_COLOR = 1;
}

message HelloReply {
  string message = 1;
}

message HelloRequest {
  string name = 1;
}

message SearchRequest{
  string People_Name = 1;
  int32 People_Age = 2;
  Home home = 3;
}

message SearchReponse{
  string People_Name = 1;
  int32 People_Age = 2;
  double People_High = 3;
  repeated string Hobbies = 4;
  bytes People_Read = 5;
}